<resources>
    <string name="dialog_title_licenses">License</string>
    <string name="dialog_title_profile">Profile</string>
    <string name="license_title_developer">Piash Sarker</string>
    <string name="license_developer_email">sarkerpt@gmail.com</string>
    <string name="license_developer_phone">+8801683193505</string>
    <string name="share">Share</string>
    <string name="rate_app">Rate This App</string>
    <string name="bug">Submit Bug</string>
    <string name="license">License</string>
    <string name="license_title_company">Company Information</string>
    <string name="license_company">Next Innovation Soft</string>
    <string name="license_company_website">www.nextinnovationsoft.com</string>
    <string name="license_title_dev">Developer InfoFrmation</string>
    <string name="message">text</string>
    <string name="dialog_title">Scan Code Result</string>
    <string name="exit_title">Exit</string>
    <string name="ok">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok_title">Ok</string>
    <string name="scan_your_first">Scan your first Barcode or QR Code to see the information here.</string>
    <string name="camera_permission_granted">Camera Permission Granted.</string>
    <string name="camera_permission_request">Camera permission is required for Barcode Scanning.</string>
    <string name="sorry_for_not_permission">Sorry , We are not able to scan Barcode without your permission.</string>
    <string name="swipe">Swipe Down To Refresh</string>
    <string name="app_ad_id">ca-app-pub-1981329224036091~6899735442</string>
    <string name="ad_unit_id">ca-app-pub-1981329224036091~6899735442</string>
    <string name="scan_no">Scan No #</string>
    <string name="number">1</string>
    <string name="sample_code">123123123123221</string>
    <string name="date_example">10 Nov 2017 12.12 AM</string>
    <string name="app_name"><![CDATA[Fastest Barcode & QR Code Scanner]]></string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_home">Accueil</string>
    <string name="title_profile">Profil</string>
    <string name="title_search1">Recherche</string>
    <string name="title_search">Recherche Par code</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">Historique</string>
    <string name="title_list">Ma Liste</string>
    <string name="title_account">Compte</string>
    <string name="title_advSearch">Recherche avancée</string>
    <string name="title_param">Paramètres</string>
    <string name="title_logout">Se déconnecter</string>
    <string name="hint_text">Login</string>
    <string name="unelevated_button_label_enabled">Se Connecter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="hint_edit_text1">E-mail</string>
    <string name="hint_edit_text2">Password</string>
    <string name="hint_edit_text3">Username</string>
    <string name="Sign_up_msg">Dont have an account? Sign Up!</string>
    <string name="Sign_in_msg">Already registered? Sign In!</string>
    <string name="sign_up_btn">S\'inscrire</string>
    <string name="facebook_app_id">571016640354352</string>
    <string name="fb_login_protocol_scheme">fb513678916023542</string>
    <string name="welcome_msg">Welcome</string>
    <string name="login_msg">Log in Now!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <plurals name="offline_notification_count">
        <item quantity="one">You have 1 offline product waiting to be contributed to Open Food Facts</item>
        <item quantity="other">You have %d offline products waiting to be contributed to Open Food Facts</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">1 second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">1 minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">1 hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">1 day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="action_about">About</string>
    <string name="action_discover">Discover</string>
    <string name="contribute">How to contribute</string>
    <string name="action_find">Find</string>
    <string name="product_incomplete_message">The ingredient list of this product is not complete. As a result, the allergen alert is not shown.</string>
    <string name="product_allergen_prompt">This product contains:</string>
    <string name="no_offline_data">You\'re all done</string>
    <string name="first_offline">Products added offline will appear here</string>
    <string-array name="upload_image" translatable="false">
        <item>640 X 480</item>
        <item>1024 X 768</item>
        <item>1152 X 864</item>
        <item>1600 X 1200</item>
    </string-array>
    <string-array name="nav_drawer_items_product">
        <item>Summary</item>
        <item>Ingredients</item>
        <item>Nutrition</item>
        <item>Nutrition Table</item>
        <item>Environment</item>
    </string-array>
    <string-array name="nav_drawer_new_items_product">
        <item>Product Photos</item>
        <item>Ingredient Analysis</item>
    </string-array>
    <string-array name="weights_array" translatable="false">
        <item>g</item>
        <item>mg</item>
        <item>kg</item>
        <item>l</item>
        <item>cl</item>
    </string-array>
    <string-array name="energy_units" translatable="false">
        <item>kcal</item>
        <item>kJ</item>
    </string-array>
    <string-array name="volume_units" translatable="false">
        <item>l</item>
        <item>oz</item>
    </string-array>
    <string-array name="nutrition_weight_units" translatable="false">
        <item>g</item>
        <item>mg</item>
        <item>µg</item>
    </string-array>
    <string-array name="nutrition_serving_weight_units" translatable="false">
        <item>g</item>
        <item>mg</item>
        <item>µg</item>
        <item>l</item>
        <item>ml</item>
    </string-array>
    <string-array name="weight_all_units">
        <item>g</item>
        <item>mg</item>
        <item>µg</item>
        <item>% DV</item>
        <item>IU</item>
    </string-array>
    <string-array name="nutrients_array">
        <item>Alpha-linolenic acid / ALA (18:3 n-3)</item>
        <item>Arachidic acid (20:0)</item>
        <item>Arachidonic acid / AA / ARA (20:4 n-6)</item>
        <item>Behenic acid (22:0)</item>
        <item>Bicarbonate</item>
        <item>Biotin</item>
        <item>Butyric acid (4:0)</item>
        <item>Caffeine</item>
        <item>Calcium</item>
        <item>Capric acid (10:0)</item>
        <item>Caproic acid (6:0)</item>
        <item>Caprylic acid (8:0)</item>
        <item>Casein</item>
        <item>Cerotic acid (26:0)</item>
        <item>Chloride</item>
        <item>Cholesterol</item>
        <item>Chromium</item>
        <item>Copper</item>
        <item>Dihomo-gamma-linolenic acid / DGLA (20:3 n-6)</item>
        <item>Docosahexaenoic acid / DHA (22:6 n-3)</item>
        <item>Eicosapentaenoic acid / EPA (20:5 n-3)</item>
        <item>Elaidic acid (18:1 n-9)</item>
        <item>Erucic acid (22:1 n-9)</item>
        <item>Fluoride</item>
        <item>Fructose</item>
        <item>Gamma-linolenic acid / GLA (18:3 n-6)</item>
        <item>Glucose</item>
        <item>Gondoic acid (20:1 n-9)</item>
        <item>Iodine</item>
        <item>Iron</item>
        <item>Lactose</item>
        <item>Lauric acid (12:0)</item>
        <item>Lignoceric acid (24:0)</item>
        <item>Linoleic acid / LA (18:2 n-6)</item>
        <item>Magnesium</item>
        <item>Maltodextrins</item>
        <item>Maltose</item>
        <item>Manganese</item>
        <item>Mead acid (20:3 n-9)</item>
        <item>Melissic acid (30:0)</item>
        <item>Molybdenum</item>
        <item>Monounsaturated fat</item>
        <item>Montanic acid (28:0)</item>
        <item>Myristic acid (14:0)</item>
        <item>Nervonic acid (24:1 n-9)</item>
        <item>Nucleotides</item>
        <item>Oleic acid (18:1 n-9)</item>
        <item>Omega 3 fatty acids</item>
        <item>Omega 6 fatty acids</item>
        <item>Omega 9 fatty acids</item>
        <item>Palmitic acid (16:0)</item>
        <item>Pantothenic acid / Pantothenate (Vitamin B5)</item>
        <item>pH</item>
        <item>Phosphorus</item>
        <item>Sugar alcohols (Polyols)</item>
        <item>Polyunsaturated fat</item>
        <item>Potassium</item>
        <item>Selenium</item>
        <item>Serum proteins</item>
        <item>Silica</item>
        <item>Starch</item>
        <item>Stearic acid (18:0)</item>
        <item>Sucrose</item>
        <item>Taurine</item>
        <item>Trans fat</item>
        <item>Vitamin A</item>
        <item>Vitamin B1 (Thiamin)</item>
        <item>Vitamin B12 (Cobalamin)</item>
        <item>Vitamin B2 (Riboflavin)</item>
        <item>Vitamin B3 / Vitamin PP (Niacin)</item>
        <item>Vitamin B6 (Pyridoxin)</item>
        <item>Vitamin B9 (Folic acid)</item>
        <item>Vitamin C (Ascorbic acid)</item>
        <item>Vitamin D</item>
        <item>Vitamin E</item>
        <item>Vitamin K</item>
        <item>Zinc</item>
    </string-array>
    <string name="txtNutrientLevel100g">Nutrient levels for 100g :</string>
    <string name="update_image">Send an Updated Image</string>
    <string name="add_nutrient_prompt_text">Add nutrition facts to compute the Nutri-Score</string>
    <string name="txt_no_nutrition_data">This product doesn\'t have any nutrition information on the packaging. If this has changed, you can edit the product.</string>
    <string name="nnc_aa">Abscence de sucres , de sel,de lipides</string>
</resources>