<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/title_search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_perm_identity_black_24dp"
            android:title="@string/title_account" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_barcode"
            android:title="@string/title_scan" />
        <item
            android:id="@+id/nav_advancesearch"
            android:icon="@drawable/ic_advance_search"
            android:title="@string/title_advSearch" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/title_list" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/title_history" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_preferences"
            android:title="@string/title_param" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_action_name"
            android:title="@string/title_logout" />
    </group>
</menu>