<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_barcode"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search1" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/baseline_schedule_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/baseline_list_black_24dp"
        android:title="@string/title_list" />

</menu>
