<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.nextinnovation.pt.barcodescanner.fragment.BarcodeFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_barcode_scanner" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.nextinnovation.pt.barcodescanner.fragment.SearchFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nextinnovation.pt.barcodescanner.fragment.LicenseFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.nextinnovation.pt.barcodescanner.fragment.YourListFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_list"
        android:name="com.nextinnovation.pt.barcodescanner.fragment.YourListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_your_list" />
</navigation>