<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:isScrollContainer="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewNutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/spacing_normal"
                android:adjustViewBounds="true"
                android:background="?android:selectableItemBackground"
                android:maxHeight="120dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_add_a_photo_black_48dp" />

            <Button
                android:id="@+id/newAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/spacing_normal"
                android:text="@string/update_image"
                style="@style/BorderButton"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/imageGradeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <Button
                android:id="@+id/get_nutriscore_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:text="@string/add_nutrient_prompt_text"
                android:visibility="gone"
                style="@style/BorderButton"
                />

            <TextView
                android:id="@+id/textNoNutritionData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/txt_no_nutrition_data"
                android:textSize="18sp"
                android:visibility="gone" />
            <androidx.cardview.widget.CardView
                android:id="@+id/cvProductDetails1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:layout_marginBottom="@dimen/spacing_tiny"
                app:cardElevation="@dimen/card_elevation">

                <TextView
                    android:id="@+id/textscore"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/nnc_aa"


                    android:textStyle="bold" />



            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/nutrient_levels_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textNutrientTxt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginTop="@dimen/spacing_tiny"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:padding="@dimen/spacing_small"
                        android:text="@string/txtNutrientLevel100g"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/font_normal"
                        android:textStyle="bold" /><![CDATA[

                    android:orientation="vertical" android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    ]]>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:divider="@color/white"
                        android:dividerHeight="0dp"
                        android:padding="@dimen/spacing_small"
                        android:paddingBottom="60dp"
                        android:scrollbars="vertical">
                        <include layout="@layout/item_list"></include></LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/item_list"
                        android:layout_width="fill_parent"
                        android:layout_height="376dp"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:layout_marginBottom="@dimen/spacing_tiny"
                        android:divider="@color/white"
                        android:dividerHeight="0dp"
                        android:padding="@dimen/spacing_small"
                        android:paddingBottom="60dp"
                        android:scrollbars="vertical"
                        tools:listitem="@layout/item_list" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/serving_size_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardElevation="@dimen/card_elevation"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textServingSize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:layout_marginBottom="@dimen/spacing_tiny"
                    android:padding="@dimen/spacing_small"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/font_normal" />

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="@dimen/card_elevation"
                android:id="@+id/nutrimentsCardView"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
