<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="583dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="568dp">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="63dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/barcode_icon_2_png"
                    android:foreground="@color/transparent"
                    android:padding="10dp"
                    android:scrollbarTrackHorizontal="@color/transparent"
                    android:scrollbarTrackVertical="@color/transparent"
                    android:tint="@color/transparent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Login Page"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/hint_edit_text1"
                    android:textColor="@color/com_facebook_button_background_color_focused_disabled"
                    android:textColorLink="@color/colorPrimary"
                    android:textCursorDrawable="@color/colorPrimary"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:paddingTop="0dp"
                    android:paddingBottom="16dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/grey_800" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_edit_text2"
                    android:inputType="textPassword"
                    android:textColorLink="@color/colorPrimary"
                    android:textCursorDrawable="@color/colorPrimary"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:tint="@color/grey_800"
                    app:srcCompat="@drawable/eye_off" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/remember_me"
                    android:textColor="@color/textColor" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:text="@string/forgot_pass"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor"
                    android:textSize="13sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:textColor="@color/material_red"
                android:textSize="12sp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/error_msg"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="108dp"
                android:layout_marginLeft="108dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="105dp"
                android:layout_marginRight="105dp"
                android:background="#3F51B5"
                android:bufferType="normal"
                android:ellipsize="none"
                android:fontFamily="sans-serif-medium"
                android:text="@string/unelevated_button_label_enabled"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="12sp"
                app:icon="@drawable/img_user"
                app:iconPadding="5dp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="Or Login with"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/sign_in_google"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/transparent"
                    android:padding="12dp"
                    app:srcCompat="@drawable/googleg_standard_color_18" />

                <ImageButton
                    android:id="@+id/sign_in_facebook"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/transparent"
                    android:padding="8dp"
                    android:scaleType="center"
                    android:src="@mipmap/ic_facebook_foreground" />

            </LinearLayout>

            <TextView
                android:id="@+id/Sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:linksClickable="true"
                android:text="@string/Sign_up_msg" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>
